Complete the syntax highlighting and add basic functionality

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -23,3 +23,8 @@
 // -------------------------------------
 //   Modules
 // -------------------------------------
+
+#editor, #result {
+  width: 50%;
+  height: 550px;
+}
