Improve the display of the preview area

--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -7,6 +7,8 @@ $banner-height: 50px;
 
 // Colors
 
-$main-bg-color: #212433;
+$main-bg-color: #373D49;
 
 $main-border-color: #E8E8E8;
+
+$secondary-text-color: #A0AABF;
