--- a/assets/scss/modules/_code-box.scss
+++ b/assets/scss/modules/_code-box.scss
@@ -11,5 +11,9 @@
     padding: 5px 30px 5px;
 
     border-bottom: $border;
+
+    color: $secondary-text-color;
+    text-transform: uppercase;
+    font-size: 16px;
   }
 }
